Fix word wrap issues in general and for pre

--- a/css/scss/2-base/_typography.scss
+++ b/css/scss/2-base/_typography.scss
@@ -6,6 +6,11 @@
 	@include bp("small") {
 		font-size: $base-font-size;
 	}
+
+	word-break: break-word;
+	pre {
+		white-space: pre-wrap;
+	}
 }
 
 h1,
